[Gradle|Exec] test: add tests for the Gradle JVM arguments merging
GitOrigin-RevId: 0410d2f45c8080dc2a9895be495581cd5eaef39f